# rust-os

./: Cargo.toml
.cargo/: config.toml
src/: gdt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/interrupts/: keyboard.rs  mod.rs
src/memory/: allocator.rs  paging.rs
tests/: boot.rs  stack_overflow.rs
