[package]
name = "ros"
version = "0.1.0"
authors = ["Gabriel Bitencourt <gabrielbitencourt25@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
rlibc = "1.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.11.1"
uart_16550 = "0.2.7"
pic8259_simple = "0.2.0"

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
